--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "url": "https://github.com/issiki/pinyin-tone-marks/issues"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "mocha": "^7.1.1"
   }
 }
